++stream toList converted.